--- a/mini project/index.html
+++ b/mini project/index.html
@@ -11,42 +11,64 @@
             background-repeat: no-repeat;
             background-position: center;
             height: 100%;
-            margin: auto;
+            margin: 0;
             color: white;
         }
-        form {
-            max-width: 400px;
-            margin: auto;
-            color: #ae1212;
-        }
-        label {
-            display: block;
-            margin: 1px 0 5px;
-        }
-        input, select, textarea, button  {
-            width: 100%;
-            padding: 20px;
-            margin-bottom: 15px;
+        header {
+            text-align: center;
+            padding: 50px 20px;
+            background-color: rgba(0, 0, 0, 0.5);
+            font-size: 2.5rem;
         }
         ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.8);
         }
         li {
             float: left;
         }
-        li  a  {
+        li a, li button {
             display: block;
-            color: rgb(161, 21, 21);
+            color: white;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
         }
-        li a:hover {
-            background-color: #111;
+        li a:hover, li button:hover {
+            background-color: rgba(255, 87, 34, 0.8);
+        }
+        form {
+            max-width: 400px;
+            margin: 20px auto;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        form label {
+            display: block;
+            margin: 10px 0 5px;
+        }
+        input, select, textarea, button {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: none;
+            border-radius: 5px;
+        }
+        input[type="checkbox"] {
+            width: auto;
+        }
+        button {
+            background-color: #ff5733;
+            color: white;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        button:hover {
+            background-color: #e04e2b;
         }
         #contact {
             display: none;
@@ -54,6 +76,52 @@
             padding: 20px;
             color: white;
             margin-top: 20px;
+            border-radius: 10px;
+        }
+        #result {
+            text-align: center;
+            color: rgb(184, 32, 32);
+            margin-top: 20px;
+        }
+        .testimonials {
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 40px 20px;
+            margin-top: 40px;
+            color: white;
+            text-align: center;
+        }
+        .testimonials h2 {
+            margin-bottom: 20px;
+        }
+        .testimonial {
+            margin: 20px 0;
+            padding: 15px;
+            background-color: rgba(255, 87, 34, 0.8);
+            border-radius: 10px;
+        }
+        .testimonial img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+        .testimonial p {
+            font-style: italic;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.9);
+            color: white;
+            margin-top: 40px;
+        }
+        #about {
+            display: none; /* Hide About by default */
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            color: white;
+            margin-top: 20px;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -61,14 +129,20 @@
     <ul>
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="https://www.sciencedaily.com/news/health_medicine/fitness/">News</a></li>
-        <li><button id="showContactButton">Contact</button></li> 
-        <li><a href="#about">About</a></li> 
+        <li><button id="showContactButton">Contact</button></li>
+        <li><button id="showAboutButton">About</button></li>
     </ul>
 
     <div id="contact">
         <p><b>Customer Support:</b> support@getfitapp.com</p>
         <p><b>Phone:</b> +1-804-123-4567</p>
         <p><b>Address:</b> 123 Get Fit Fitness St, Richmond City, Virginia State</p>
+    </div>
+
+    <div id="about">
+        <h2>About Us</h2>
+        <p>At Get Fit, we believe that fitness is for everyone. Our platform is designed to help you achieve your goals, whether you're looking to lose weight, gain muscle, or simply live a healthier lifestyle. Founded in 2025, our mission is to empower individuals to take charge of their health and fitness journey.</p>
+        <p>With customized workout plans, expert guidance, and a supportive community, we're here to make fitness accessible and enjoyable for everyone. Join us and start your transformation today!</p>
     </div>
 
     <h1>Get Fit</h1>
@@ -98,19 +172,45 @@
 
         <h2>Select Workout Plan</h2>
 
-        <label for="lose weight"><span style="background-color: rgb(218, 217, 231);"><b>Lose weight</b></span></label><br> 
+        <label for="lose weight"><span style="background-color: rgb(231, 12, 12);"><b>Lose weight</b></span></label><br> 
         <input type="checkbox" id="LS" name="workout plan" value="Lose weight">
 
-        <label for="Gain muscles"><span style="background-color: rgb(218, 217, 231);"><b>Gain muscles</b></span></label><br>
+        <label for="Gain muscles"><span style="background-color: rgb(231, 12, 12);"><b>Gain muscles</b></span></label><br>
         <input type="checkbox" id="GM" name="workout plan" value="Gain muscles">
 
-        <label for="lose weight & gain muscles"><span style="background-color: rgb(218, 217, 231);"><b>Lose Weight & Gain Muscles</b></span></label>
+        <label for="lose weight & gain muscles"><span style="background-color: rgb(231, 12, 12);"><b>Lose Weight & Gain Muscles</b></span></label>
         <input type="checkbox" id="LS&GM" name="workout plan" value="Lose weight & gain muscles">
       
         <button type="submit"><b>Submit</b></button><br>
     </form>
 
     <h2 id="result" style="color: rgb(184, 32, 32); text-align: center;"></h2>
+
+    <div class="testimonials">
+        <h2>What Our Customers Say</h2>
+
+        <div class="testimonial">
+            <img src="https://randomuser.me/api/portraits/men/30.jpg" alt="Customer 1">
+            <p>"I never thought I'd be able to lose weight and build muscle at the same time, but with Get Fit's personalized plans, I've achieved more than I ever expected!"</p>
+            <b>- Smith Doe</b>
+        </div>
+
+        <div class="testimonial">
+            <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="Customer 2">
+            <p>"This program has completely transformed my fitness journey. I'm more confident, healthier, and feel stronger every day!"</p>
+            <b>- lara Smith</b>
+        </div>
+
+        <div class="testimonial">
+            <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Customer 3">
+            <p>"Get Fit made it easy for me to stay on track with my goals. I love how the workouts are challenging but doable!"</p>
+            <b>- Mark jane</b>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2025 Get Fit. All rights reserved.</p>
+    </footer>
 
     <script>
         // Show or hide the contact info
@@ -121,7 +221,19 @@
                 infoDiv.style.display = 'block'; // Show the info
             } else {
                 infoDiv.style.display = 'none'; // Hide the info
-                this.textContent = 'Contact'; // Change button text
+                this.textContent = 'Contact'; 
+            }
+        });
+
+        // Show or hide the about info
+        document.getElementById('showAboutButton').addEventListener('click', function() {
+            const aboutDiv = document.getElementById('about');
+            if (aboutDiv.style.display === 'none' || aboutDiv.style.display === '') {
+                this.textContent = 'Hide Info'; // Change button text
+                aboutDiv.style.display = 'block'; // Show the About info
+            } else {
+                aboutDiv.style.display = 'none'; // Hide the About info
+                this.textContent = 'About'; // Change button text
             }
         });
 
@@ -130,7 +242,7 @@
         const result = document.getElementById('result');
 
         form.addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent form from refreshing the page
+            event.preventDefault(); 
 
             // Get form data
             const name = document.getElementById('name').value;
@@ -139,7 +251,7 @@
             const weight = document.getElementById('weight').value;
             const goal = document.getElementById('goal').value;
 
-            // Get selected workout plan
+            
             const workoutPlans = [];
             document.querySelectorAll('input[name="workout plan"]:checked').forEach(plan => {
                 workoutPlans.push(plan.value);
